k8s/mongo-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-deployment
  namespace: expensetracker
spec:
  selector:
    matchLabels:
      app: mongo-deployment
  
  template:
    metadata:
      labels:
        app: mongo-deployment
    
    spec:
      containers:
      - name: mongopod
        image: mongo:latest
        ports:
        - containerPort: 27017
        volumeMounts:
        - mountPath: /data/db
          name: mongo-storage
      volumes:
      - name: mongo-storage
        persistentVolumeClaim:
          claimName: mongo-pvc
