k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: expensetracker
spec:
  selector:
    app: backend-deployment
  ports:
  - port: 5000
    targetPort: 5000
