k8s/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: expensetracker
spec:
  selector:
    app: frontend-deployment
  ports:
  - port: 5173
    targetPort: 5173
