k8s/mongo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
  namespace: expensetracker
spec:
  selector:
    app: mongo-deployment
  ports:
  - port: 27017
    targetPort: 27017
